# meilisearch-try-rust

./: .env  .gitignore  Cargo.toml  Makefile  README.md
data.json/: docs.json
src/add/: main.rs
src/get/: main.rs
src/index/: main.rs
